chages made complete

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
 	<link rel="stylesheet" href="assets/css/slick.css">
 	<link rel="stylesheet" href="assets/css/nice-select.css">
 	<link rel="stylesheet" href="assets/css/style.css">
-    <title>Olisa</title>
+	<link rel="stylesheet" href="assets/css/custom.css">
+  <title>Olisa</title>
   </head>
   <body>
     
